--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "firstclass",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "JavaScript utility library",
-  "main": "firstclass.js",
+  "main": "js/firstclass.js",
   "scripts": {
     "start": "gulp",
     "test": "gulp test"
