--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "karma-jasmine": "^0.3.5",
     "typedoc": "^0.3.4",
     "typescript": "^1.5.0-beta"
+  },
+  "dependencies": {
+    "es5-shim": "^4.1.3"
   }
 }
