--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^1.5.0-beta"
   },
   "dependencies": {
-    "es5-shim": "^4.1.3"
+    "es5-shim": "^4.1.3",
+    "json3": "^3.3.2"
   }
 }
