--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "karma": "^0.12.33",
     "karma-chrome-launcher": "^0.1.12",
     "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "phantomjs": "^1.9.17",
     "typedoc": "^0.3.4",
     "typescript": "^1.5.0-beta"
   },
